# GPSAgricola

./: CMakeLists.txt  Main.qml  UntitledProject.qrc  assets.qrc  main.cpp
.cache/clangd/index/: BaseService.cpp.0AFFA5ADD5A71BAB.idx  BaseService.h.C73493BBCE5CFB08.idx  BaseView.cpp.C41DAA6DA2620E55.idx  BaseView.h.572E925815582E77.idx  Field.h.15CFF410F50AB58A.idx  FieldService.h.CB5AA0566D621548.idx  FieldView.cpp.FFC6BFDD1639E5F5.idx  FieldView.h.B7D7D86A53B8643E.idx  FieldsListModel.h.CB40EAB9720C603A.idx  FieldsView.h.969FD8C660C17EDA.idx  GeolocationService.cpp.77FFA78ED222684F.idx  GeolocationService.h.4E31F0195CD85050.idx  HomeView.cpp.BF0307DF37DCD68F.idx  HomeView.h.46255B40A3AFDC58.idx  PainterService.cpp.2DDA546FCB0ACC5D.idx  PainterService.h.865749EA942B66EB.idx  ServicesManager.cpp.E6D178D956D2EC0E.idx  ServicesManager.h.8E2E9865C1E67EFF.idx  Tile.h.075F153BFA1C2BAF.idx  Tile.h.FEB2FE70554E5D1D.idx  TileMap.h.FDF0C0A7403CCC44.idx  VehicleData.h.A8105CC43B10C3C4.idx  application.cpp.7239A9914D89EB4A.idx  application.h.2FC41E8C41EB9ACB.idx  main.cpp.E3A611A029772C0D.idx
.qtcreator/: project.json.qtds
3DModels/: Arrow.qml  Tractor_A.qml
3DModels/meshes/: _MergedNode_0_mesh.mesh  plane_001_mesh.mesh
assets/: Arrow.glb  Tractor-A.glb
assets/shaders/: tileFragmentShader.frag  tileVertexShader.vert
qml/components/: BaseModal.qml  TextInputModal.qml  TopBar.qml
qml/components/buttons/: MenuButton.qml
qml/views/: FieldView.qml  HomeView.qml  MachinesView.qml
qml/views/addField/: AddFieldView.qml
qml/views/addJob/: AddJobView.qml
qml/views/addJob/components/: FieldSelectorModal.cpp  FieldSelectorModal.h  FieldSelectorModal.qml
qml/views/fields/: FieldsView.qml
qml/views/fields/components/: FieldItem.qml
qml/views/jobs/: JobsView.qml
qml/views/jobs/components/: JobItem.qml
source/: BaseService.cpp  BaseService.h  BaseView.cpp  BaseView.h  ServicesManager.cpp  ServicesManager.h  application.cpp  application.h
source/entities/: Field.h  JobTypes.h  Tile.h  TileMap.h  VehicleData.h
source/entities/jobs/: BaseJob.cpp  BaseJob.h  SprayJob.cpp  SprayJob.h
source/models/: FieldsListModel.cpp  FieldsListModel.h
source/objects/: AddJobViewModel.h  FieldObject.h  JobObject.h
source/services/: FieldService.cpp  FieldService.h  GeolocationService.cpp  GeolocationService.h  JobsService.cpp  JobsService.h  PainterService.cpp  PainterService.h
source/types/: Tile.h  VehicleData.h
source/views/: AddFieldView.cpp  AddFieldView.h  AddJobView.cpp  AddJobView.h  FieldView.cpp  FieldView.h  FieldsView.cpp  FieldsView.h  HomeView.cpp  HomeView.h  JobsView.cpp  JobsView.h
